[project]
name = "pr-review-agent"
version = "0.1.0"
description = "AI-powered code review agent with multi-step orchestration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "PyGithub>=2.5.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
pr-review = "review_agent.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
